# pyspark-event-correlation

./: HISTORY.md  README.md  setup.cfg
example/: exampe.py  requirements.txt
src/pyspark-event-correlation/: classifiers.py
src/pyspark_event_correlation/: classifiers.py  utils.py
