[metadata]
name = pyspark-event-correlation
version = 1.0.2
author = Jim Katris
author_email = info@intellia.gr
description = Event Correlation and Changing Detection Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Intellia-SME/pyspark-event-correlation
project_urls =
    Changelog = https://github.com/Intellia-SME/pyspark-event-correlation/blob/main/HISTORY.md
    Twitter = https://twitter.com/intellia_gr
    Bug Tracker = https://github.com/Intellia-SME/pyspark-event-correlation/issues
license = Apache-2.0 License
keywords = pyspark
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyspark>=3.2.1
    pandas>=1.4.0
python_requires = >=3.6

[options.packages.find]
where = src